<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin">

        <TextView
            android:id="@+id/add_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/added_cart"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:gravity="center_horizontal"
            style="@style/TextAppearance.AppCompat.Title"/>
        <Button
            android:id="@+id/continue_shopping_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_message"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/button_continue_shopping"/>

        <Button
            android:id="@+id/shopping_cart_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/continue_shopping_button"
            android:text="@string/button_redirect_cart"/>
    </RelativeLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/add_to_cart_title"
            app:titleTextColor="@android:color/white"/>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>