<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin"
        android:paddingBottom="@dimen/vertical_margin"
        android:layout_marginTop="?actionBarSize">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cart_item_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/buy_now_button" />

        <TextView
            android:id="@+id/label_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_label"
            android:layout_above="@id/buy_now_button"
            style="@style/TextAppearance.AppCompat.Title"/>

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_toRightOf="@id/label_total_price"
            android:layout_toEndOf="@id/label_total_price"
            android:text="@string/default_total"
            android:layout_above="@id/buy_now_button"
            style="@style/TextAppearance.AppCompat.Title"/>

        <Button
            android:id="@+id/buy_now_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/button_pay_now" />
    </RelativeLayout>
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/cart_title"
            app:titleTextColor="@android:color/white"/>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>